--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     }
     #map {
         position: absolute;
-        top: 0;
         bottom: 0;
-        width: 100%;
+        width: 75%;
+        height: 85%;
         z-index: 0;
     }  
 
