--- a/style.css
+++ b/style.css
@@ -10,6 +10,46 @@
         z-index: 0;
     }  
 
+    #searchButton{
+        display: inline-block;
+        background-color: #7b38d8;
+        border-radius: 10px;
+        border: 4px double #cccccc;
+        color: #eeeeee;
+        text-align: center;
+        font-size: 28px;
+        padding: 20px;
+        width: fit-content;
+        height: fit-content;
+        transition: all 0.5s;
+        cursor: pointer;
+        margin: 5px;
+      }
+    #searchButton span {
+        cursor: pointer;
+        display: inline-block;
+        position: relative;
+        transition: 0.5s;
+      }
+      #searchButton span:after {
+        content: "\00bb";
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        right: -10px;
+        transition: 0.5s;
+      }
+      #searchButton:hover {
+        background-color: #f7c2f9;
+      }
+      #searchButton:hover span {
+        padding-right: 25px;
+      }
+      #searchButton:hover span:after {
+        opacity: 1;
+        right: 0;
+    }
+
     #menuSearch{
         font-size:xx-large;
         font-weight: bolder;
@@ -26,13 +66,6 @@
     }
 
 
-
-      #searchButton{
-        font-size:medium;
-        color: blue;
-        width: 40%;
-  
-    } 
     #Bandeau{ 
         font-size: xx-large;
         font-weight: bolder;
