--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
         text-align: center;
         position: absolute;
         right: 0;
-        opacity: 90%;
+        opacity: 100%;
         bottom: 0;
         height: 85%;
         width: 25%;
@@ -76,4 +76,45 @@
         color: aqua;
         background-color: black;
 z-index: 1;
+}
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.popup .popuptext {
+  visibility: hidden;
+  width: 350px;
+  height: 250px;
+  background-color: #24d23e;
+  color: antiquewhite;
+  text-align: center;
+  border-radius: 6px;
+  padding: 20px 0;
+  position: absolute;
+  z-index: 1;
+  top: 230px;
+  left: 50%;
+  margin-left: -550px;
+  border-width: 2px;
+  border-color: #555;
+  border-style: solid;
+}
+
+
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1.5s;
+  animation: fadeIn 1.5s
+}
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
 }
