--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Cabin', sans-serif;
   font-weight: bolder;
   position:relative;
-   box-shadow:
+  box-shadow:
   2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
   6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
   12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
@@ -53,7 +53,7 @@ body {
 
 .menuSelect {
   display: flex;
-  position: relative;
+  position:fixed;
   flex-direction: column;
   grid-column: 3/3;
   grid-row:3/4;
@@ -64,6 +64,10 @@ body {
   height: 300px;;
   border-radius: 6px;
   background:#2d51e6;
+  bottom: 0%;
+  right: 0%;
+  margin-bottom: 20px;
+  margin-right: 20px;
   box-shadow:
   6.3px 6.3px 2.2px rgba(0, 0, 0, 0.016),
   12.9px 12.9px 5.3px rgba(0, 0, 0, 0.025),
@@ -141,7 +145,7 @@ body {
 #affichageResult{
 list-style-type:circle;
 font-size: xx-large;
-color: #2d51e9;
+color: black;
 z-index: 1;
 
 
