--- a/style.css
+++ b/style.css
@@ -3,178 +3,151 @@ body {
   padding: 0;
 }
 
-  .titreAppli{
-  text-align:center;
+.titreAppli {
+  text-align: center;
   color: black;
   font-size: 100px;
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   font-weight: bolder;
-  position:relative;
-  box-shadow:
-  2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-  6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-  12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
-  22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-  41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-  100px 100px 80px rgba(0, 0, 0, 0.07);
+  position: relative;
+  box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07);
   z-index: 1;
-  
 }
 
-    #map {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 0;
-    }  
+#map {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
 
 .gridSpace {
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  grid-auto-rows:minmax(120px,4fr)  ;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: minmax(120px, 4fr);
 }
 
-    #menuSearch{
-        font-size:xx-large;
-        font-weight: bolder;
-        text-align: center;
-        position: absolute;
-        right: 0;
-        opacity: 100%;
-        bottom: 0;
-        height: 85%;
-        width: 25%;
-        color: red;
-        background-color: rgba(126, 208, 175, 0.986);
-        z-index: 1; 
-    }
-
+#menuSearch {
+  font-size: xx-large;
+  font-weight: bolder;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  opacity: 100%;
+  bottom: 0;
+  height: 85%;
+  width: 25%;
+  color: red;
+  background-color: rgba(126, 208, 175, 0.986);
+  z-index: 1;
+}
 
 .menuSelect {
   display: flex;
-  position:fixed;
+  position: fixed;
   flex-direction: column;
   grid-column: 3/3;
-  grid-row:3/4;
-  margin-right:20px;
+  grid-row: 3/4;
+  margin-right: 20px;
   z-index: 1;
-  grid-gap:2px;
-  width: 300px;;
-  height: 300px;;
+  grid-gap: 2px;
+  width: 300px;
+  height: 300px;
   border-radius: 6px;
-  background:#2d51e6;
+  background: #2d51e6;
   bottom: 0%;
   right: 0%;
   margin-bottom: 20px;
   margin-right: 20px;
-  box-shadow:
-  6.3px 6.3px 2.2px rgba(0, 0, 0, 0.016),
-  12.9px 12.9px 5.3px rgba(0, 0, 0, 0.025),
-  20.8px 20.8px 10px rgba(0, 0, 0, 0.032),
-  31.8px 31.8px 17.9px rgba(0, 0, 0, 0.04),
-  50.4px 50.4px 33.4px rgba(0, 0, 0, 0.049),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-;
-
- 
+  box-shadow: 6.3px 6.3px 2.2px rgba(0, 0, 0, 0.016),
+    12.9px 12.9px 5.3px rgba(0, 0, 0, 0.025),
+    20.8px 20.8px 10px rgba(0, 0, 0, 0.032),
+    31.8px 31.8px 17.9px rgba(0, 0, 0, 0.04),
+    50.4px 50.4px 33.4px rgba(0, 0, 0, 0.049),
+    100px 100px 80px rgba(0, 0, 0, 0.07);
 }
 
-
-#selectRegion{
- margin: 10px;
- vertical-align: middle;
+#selectRegion {
+  margin: 10px;
+  vertical-align: middle;
   z-index: 1;
-  width:auto;
-  height:15%;
+  width: auto;
+  height: 15%;
   border-radius: 6px;
 }
 
 #selectCity {
   margin: 10px;
   vertical-align: middle;
-   z-index: 1;
-   width:auto;
-   height:15%;
-   border-radius: 6px;
+  z-index: 1;
+  width: auto;
+  height: 15%;
+  border-radius: 6px;
 }
 
 #searchButton {
- margin: auto;
-    background-color: #7b38d8;
-    border-radius: 10px;
-    border: 4px double #cccccc;
-    color: #eeeeee;
-    text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: fit-content;
-    height: fit-content;
-    transition: all 0.5s;
-    cursor: pointer;
-    width:90%;
-    position: center;
-    z-index: 1;
-    
-  }
+  margin: auto;
+  background-color: #7b38d8;
+  border-radius: 10px;
+  border: 4px double #cccccc;
+  color: #eeeeee;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: fit-content;
+  height: fit-content;
+  transition: all 0.5s;
+  cursor: pointer;
+  width: 90%;
+  position: center;
+  z-index: 1;
+}
 #searchButton span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-  }
-  #searchButton span:after {
-    content: "\00bb";
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -10px;
-    transition: 0.5s;
-  }
-  #searchButton:hover {
-    background-color: #f7c2f9;
-  }
-  #searchButton:hover span {
-    padding-right: 25px;
-  }
-  #searchButton:hover span:after {
-    opacity: 1;
-    right: 0;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+#searchButton span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -10px;
+  transition: 0.5s;
+}
+#searchButton:hover {
+  background-color: #f7c2f9;
+}
+#searchButton:hover span {
+  padding-right: 25px;
+}
+#searchButton:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
-#affichageResult{
-list-style-type:circle;
-font-size: xx-large;
-color: black;
-z-index: 1;
-
-
+#affichageResult {
+  list-style-type: circle;
+  font-size: xx-large;
+  color: black;
+  z-index: 1;
 }
 
-/*   #Bandeau{ 
-        font-size: 40px;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: bolder;
-        text-align: center;
-        position: absolute;
-        height: 15%;
-        width: 100%;
-        color: black;
-        background-color:rgba(255, 255, 255, 0.1);
-        
-z-index: 1;
-}
-
-*/
 .popup {
   position: relative;
   display: inline-block;
   cursor: pointer;
 }
 
-
 .popup .popuptext {
-  visibility:hidden;
+  visibility: hidden;
   width: 350px;
   height: 250px;
   background-color: #24d23e;
@@ -191,52 +164,52 @@ z-index: 1;
   border-width: 2px;
   border-color: #555;
   border-style: solid;
-  box-shadow:
-  0.4px 0.4px 2.2px rgba(0, 0, 0, 0.024),
-  1.8px 1.8px 5.3px rgba(0, 0, 0, 0.04),
-  5px 5px 10px rgba(0, 0, 0, 0.051),
-  11.7px 11.7px 17.9px rgba(0, 0, 0, 0.06),
-  28px 28px 33.4px rgba(0, 0, 0, 0.066),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-;
-
+  box-shadow: 0.4px 0.4px 2.2px rgba(0, 0, 0, 0.024),
+    1.8px 1.8px 5.3px rgba(0, 0, 0, 0.04), 5px 5px 10px rgba(0, 0, 0, 0.051),
+    11.7px 11.7px 17.9px rgba(0, 0, 0, 0.06),
+    28px 28px 33.4px rgba(0, 0, 0, 0.066), 100px 100px 80px rgba(0, 0, 0, 0.07);
 }
-
 
 .popup .showVerte {
   visibility: visible;
-  background-color:green ;
+  background-color: green;
   -webkit-animation: fadeIn 1.5s;
-  animation: fadeIn 1.5s
+  animation: fadeIn 1.5s;
 }
-
 
 .popup .showRouge {
   visibility: visible;
-  background-color:red ;
+  background-color: red;
   -webkit-animation: fadeIn 1.5s;
-  animation: fadeIn 1.5s
+  animation: fadeIn 1.5s;
 }
 
 .popup .showOrange {
   visibility: visible;
-  background-color:orange ;
+  background-color: orange;
   -webkit-animation: fadeIn 1.5s;
-  animation: fadeIn 1.5s
+  animation: fadeIn 1.5s;
 }
 
 @-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .cssbuttons-io-button {
-  
   background: #2d51e3;
   color: white;
   font-family: inherit;
@@ -249,21 +222,16 @@ z-index: 1;
   letter-spacing: 0.05em;
   display: flex;
   align-items: center;
-  box-shadow: inset 0 0 1.6em -0.6em  #2d51e6;
+  box-shadow: inset 0 0 1.6em -0.6em #2d51e6;
   overflow: hidden;
   position: absolute;
   height: 2.8em;
   padding-right: 3.3em;
   z-index: 1;
-  box-shadow:
-  0.4px 0.4px 2.2px rgba(0, 0, 0, 0.024),
-  1.8px 1.8px 5.3px rgba(0, 0, 0, 0.04),
-  5px 5px 10px rgba(0, 0, 0, 0.051),
-  11.7px 11.7px 17.9px rgba(0, 0, 0, 0.06),
-  28px 28px 33.4px rgba(0, 0, 0, 0.066),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-;
-
+  box-shadow: 0.4px 0.4px 2.2px rgba(0, 0, 0, 0.024),
+    1.8px 1.8px 5.3px rgba(0, 0, 0, 0.04), 5px 5px 10px rgba(0, 0, 0, 0.051),
+    11.7px 11.7px 17.9px rgba(0, 0, 0, 0.06),
+    28px 28px 33.4px rgba(0, 0, 0, 0.066), 100px 100px 80px rgba(0, 0, 0, 0.07);
 }
 
 .cssbuttons-io-button .icon {
@@ -298,4 +266,3 @@ z-index: 1;
 .cssbuttons-io-button:active .icon {
   transform: scale(0.95);
 }
-
